# voice-bridge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: discord.rs  discord_audiohandler.rs  main.rs
