[package]
name = "voice_bridge"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0"
categories = ["api-bindings"]
repository = "https://github.com/0xpr03/voice-bridge"
description = "discord teamspeak voice bridge"
keywords = ["teamspeak", "ts3","discord", "voice", "bridge", "audio"]

[profile.release]
lto = true

[dependencies]
toml = "0.7"
poise = "0.6"
serde = { version = "1.0", features = ["derive"] }
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
symphonia = { version = "0.5", features = [] }
byte-slice-cast = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

### TS stuff
audiopus = "0.2"
futures = "0.3"
slog = "2"
slog-async = "2"
slog-perf = "0.2"
slog-term = "2"
slog-envlogger = "2"
anyhow = "1"
tokio-stream = "0.1"

# Vendor OpenSSL for cross-compilation (tsclientlib needs it)
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.tsproto-packets]
version = "0.1"

[dependencies.tsclientlib]
version = "0.2"

## discord specific
[dependencies.songbird]
version = "0.5"
default-features = false
features = ["driver", "gateway", "receive", "rustls"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "gateway", "voice", "rustls_backend", "builder"]

## tokio
[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal", "sync"]